--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "js-whatsapp", "whatsapp-api", "whatsapp-web", "whatsapp-bot",
     "automation", "multi-device"
   ],
-  "homepage": "https://github.com/nstar-y/bail",
+  "homepage": "https://github.com/KaishiNava/Kaishi-baileys",
   "repository": {
-    "url": "git+ssh://git@github.com/nstar-y/bail.git"
+    "url": "git+ssh://git@github.com/KaishiNava/Kaishi-baileys.git"
   },
   "license": "MIT",
-  "author": "Adhiraj Singh",
+  "author": "Kaishi Nava",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
